# MNIST-Inference

./: .gitignore  README.md  inference.py  pyproject.toml  train.py
