[tool.poetry]
name = "bitfount-task"
version = "0.1.0"
description = ""
authors = ["Jack Walters <jackwalterswork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
pandas = "2.2.2"
torch = "2.2.2"
torchvision = "0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
